--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <hr class="divider">
             <div class="detail-row">
                 <p class="detail-label">Certificate Holder Name:</p>
-                <p class="detail-value">SAYED MUHAMMAD SAYED NOOR HUSSAIN</p>
+                <p class="detail-value">QAMAR ABBAS HASHMAT ALI</p>
             </div>
             <div class="detail-row">
                 <p class="detail-label">Course Name:</p>
-                <p class="detail-value">SHA BLS Provider</p>
+                <p class="detail-value">SHA HSFA CPR AED course</p>
             </div>
             <div class="detail-row">
                 <p class="detail-label">Certificate Valid From:</p>
