--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <hr class="divider">
             <div class="detail-row">
                 <p class="detail-label">Certificate Holder Name:</p>
-                <p class="detail-value">QAMAR ABBAS HASHMAT ALI</p>
+                <p class="detail-value">SAYED MUHAMMAD SAYED NOOR HUSSAIN</p>
             </div>
             <div class="detail-row">
                 <p class="detail-label">Course Name:</p>
